--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta charset="utf-8">
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/scramble-tofes.html">Scramble Tofes</a>
-        
+        <ul>
+          <li><a href="recipes/scramble-tofes.html">Scramble Tofes</a></li>
+          <li><a href="recipes/teriyaki-sauce.html">Teriyaki Sauce</a></li>
+          <li><a href="recipes/toast.html">Toast</a></li>
+        </ul>
     </body>
 
   </head>
