--- a/recipes/teriyaki-sauce.html
+++ b/recipes/teriyaki-sauce.html
@@ -10,19 +10,19 @@
         <p>Pour it on your food for a delicious sauce, bozo.</p>  
         <p><b>Ingredients:</b></p>  
         <ul>
-          <li>water</ul>
+          <li>water</li>li>
           <li>soy sauce</li>
           <li>honey</li>
           <li>brown sugar</li>
           <li>garlic powder</li>
           <li>ginger powder</li>
           <li>corn starch</li>
-         </ul>
-          <ol>
-            <li>Boil the water.</li>
-            <li>Add everything else.</li>
-            <li>Mix some corn starch with some water and stir it up. Pour it in and stir until it </li>
-          </ol>
+        </ul>
+        <ol>
+          <li>Boil the water.</li>
+          <li>Add everything else.</li>
+          <li>Mix some corn starch with some water and stir it up. Pour it in and stir until it </li>
+        </ol>
 
     </body>
 
